# qt_solar_clock

./: CMakeLists.txt  Makefile  README.md  TestCMakeLists.txt  Vagrantfile  builder.sh  freetype-helper.sh  helper.sh  mesa-helper.sh  pcre-helper.sh  qmake-helper.sh  qt-helper.sh  qt_helper.sh  qt_solar_clock.pro  solar_clock.cmake  solar_launcher.sh  xkbcommon-help.sh
conf/: solar_system.xml
conf/heliocentric_trajectories/: Mars.lst  Venus.lst
heliocentric_trajectories/: Earth.lst  Jupiter.lst  Mercury.lst  Neptune.lst  Saturn.lst  Uranus.lst
include/: celestialbody.h  orbitaltrack.h  solarsystem.h
qt_solar_clock/: CMakeLists.txt  celestialbody.cpp  main.cpp  mainwindow.cpp  orbitaltrack.cpp  qt_solar_clock  qt_solar_clock.pro  qt_solar_clock.pro.autosave  solarsystem.cpp
qt_solar_clock/include/: celestialbody.h  mainwindow.h  orbitaltrack.h  solarsystem.h
qt_solar_clock/src/: celestialbody.cpp  main.cpp  mainwindow.cpp  orbitaltrack.cpp  solarsystem.cpp
src/: celestialbody.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  orbitaltrack.cpp  solarsystem.cpp
